hero images on mobile fixed to right position

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -549,7 +549,7 @@ a:hover {
     background-size: cover;
     height: 120VH;
     min-height: 100vh;
-    // max-height:;
+    background-color: #001951;
 }
 
 .elevates-hero-banner .image-pattern {
@@ -802,5 +802,11 @@ a:hover {
     }
     .d-none-visible{
         visibility: hidden;
+    }
+    .shasta-hero-banner .image {
+        background-position: right;
+    }
+    .elevates-hero-banner .image {
+        background-position: right;
     }
 }
